--- a/Analisis 3 Calculadora/app/src/main/res/layout/activity_main.xml
+++ b/Analisis 3 Calculadora/app/src/main/res/layout/activity_main.xml
@@ -10,270 +10,290 @@
     <TextView
         android:id="@+id/textView"
         style="@style/Widget.MaterialComponents.TextView"
-        android:layout_width="195dp"
-        android:layout_height="49dp"
+        android:layout_width="252dp"
+        android:layout_height="64dp"
         android:text="Calculadora"
-        android:textSize="34sp"
+        android:textSize="48sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.564"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.086" />
 
     <Button
-        android:id="@+id/button28"
-        android:layout_width="119dp"
-        android:layout_height="34dp"
-        android:background="#ED0202"
-        android:backgroundTint="#EC1010"
-        android:onClick="multiplicar"
-        android:text="*"
+        android:id="@+id/button22"
+        android:layout_width="67dp"
+        android:layout_height="63dp"
+        android:background="#0091EA"
+        android:backgroundTint="#0091EA"
+        android:onClick="seis"
+        android:text="6"
+        android:textSize="16sp"
         app:iconTint="#BEFFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.705"
+        app:layout_constraintHorizontal_bias="0.59"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.494" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="54dp"
-        android:layout_height="41dp"
-        android:background="#ED0202"
-        android:backgroundTint="#EC1010"
-        android:onClick="siete"
-        android:text="7"
-        app:iconTint="#BEFFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.226"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.566" />
+        app:layout_constraintVertical_bias="0.639" />
 
     <Button
         android:id="@+id/button18"
-        android:layout_width="48dp"
-        android:layout_height="86dp"
+        android:layout_width="73dp"
+        android:layout_height="140dp"
         android:background="#ED0202"
         android:backgroundTint="#EC1010"
         android:onClick="sumar"
         android:text="+"
+        android:textSize="24sp"
         app:iconTint="#BEFFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.768"
+        app:layout_constraintHorizontal_bias="0.846"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.607" />
-
-    <Button
-        android:id="@+id/button22"
-        android:layout_width="57dp"
-        android:layout_height="40dp"
-        android:background="#ED0202"
-        android:backgroundTint="#EC1010"
-        android:onClick="seis"
-        android:text="6"
-        app:iconTint="#BEFFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.59"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.636" />
-
-    <Button
-        android:id="@+id/button21"
-        android:layout_width="52dp"
-        android:layout_height="40dp"
-        android:background="#ED0202"
-        android:backgroundTint="#EC1010"
-        android:onClick="cinco"
-        android:text="5"
-        app:iconTint="#BEFFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.398"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.635" />
-
-    <Button
-        android:id="@+id/button20"
-        android:layout_width="53dp"
-        android:layout_height="41dp"
-        android:background="#ED0202"
-        android:backgroundTint="#EC1010"
-        android:onClick="cuatro"
-        android:text="4"
-        app:iconTint="#BEFFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.226"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.636" />
-
-    <Button
-        android:id="@+id/button30"
-        android:layout_width="111dp"
-        android:layout_height="35dp"
-        android:background="#ED0202"
-        android:backgroundTint="#EC1010"
-        android:onClick="dividir"
-        android:text="/"
-        app:iconTint="#BEFFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.27"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.495" />
-
-    <Button
-        android:id="@+id/button17"
-        android:layout_width="57dp"
-        android:layout_height="37dp"
-        android:background="#ED0202"
-        android:backgroundTint="#EC1010"
-        android:onClick="nueve"
-        android:text="9"
-        app:iconTint="#BEFFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.59"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.563" />
+        app:layout_constraintVertical_bias="0.588" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="117dp"
-        android:layout_height="46dp"
+        android:layout_width="144dp"
+        android:layout_height="63dp"
         android:background="#ED0202"
         android:backgroundTint="#EC1010"
         android:onClick="limpiar"
         android:text="Limpiar"
+        android:textSize="16sp"
         app:iconTint="#BEFFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.265"
+        app:layout_constraintHorizontal_bias="0.176"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.783" />
+        app:layout_constraintVertical_bias="0.881" />
 
     <Button
-        android:id="@+id/button29"
-        android:layout_width="118dp"
+        android:id="@+id/button28"
+        android:layout_width="155dp"
         android:layout_height="46dp"
         android:background="#ED0202"
         android:backgroundTint="#EC1010"
-        android:onClick="igual"
-        android:text="="
+        android:onClick="multiplicar"
+        android:text="*"
+        android:textSize="20sp"
         app:iconTint="#BEFFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.706"
+        app:layout_constraintHorizontal_bias="0.796"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.783" />
-
-    <Button
-        android:id="@+id/button16"
-        android:layout_width="54dp"
-        android:layout_height="38dp"
-        android:background="#ED0202"
-        android:backgroundTint="#EC1010"
-        android:onClick="ocho"
-        android:text="8"
-        app:iconTint="#BEFFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.395"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.567" />
-
-    <TextView
-        android:id="@+id/txtresultado"
-        android:layout_width="252dp"
-        android:layout_height="52dp"
-        android:background="#AF9A2D"
-        android:backgroundTint="#FDFDFD"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.418" />
-
-    <Button
-        android:id="@+id/button24"
-        android:layout_width="53dp"
-        android:layout_height="42dp"
-        android:background="#ED0202"
-        android:backgroundTint="#EC1010"
-        android:onClick="uno"
-        android:text="1"
-        app:iconTint="#BEFFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.226"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.706" />
-
-    <Button
-        android:id="@+id/button26"
-        android:layout_width="55dp"
-        android:layout_height="39dp"
-        android:background="#ED0202"
-        android:backgroundTint="#EC1010"
-        android:onClick="tres"
-        android:text="3"
-        app:iconTint="#BEFFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.587"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.706" />
-
-    <Button
-        android:id="@+id/button25"
-        android:layout_width="55dp"
-        android:layout_height="40dp"
-        android:background="#ED0202"
-        android:backgroundTint="#EC1010"
-        android:onClick="dos"
-        android:text="2"
-        app:iconTint="#BEFFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.398"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.707" />
+        app:layout_constraintVertical_bias="0.42" />
 
     <Button
         android:id="@+id/button23"
-        android:layout_width="50dp"
-        android:layout_height="42dp"
+        android:layout_width="75dp"
+        android:layout_height="69dp"
         android:background="#ED0202"
         android:backgroundTint="#EC1010"
         android:onClick="restar"
         android:text="-"
+        android:textSize="24sp"
         app:iconTint="#BEFFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.767"
+        app:layout_constraintHorizontal_bias="0.845"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.706" />
+        app:layout_constraintVertical_bias="0.762" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="68dp"
+        android:layout_height="63dp"
+        android:background="#ED0202"
+        android:backgroundTint="#EC1010"
+        android:onClick="siete"
+        android:text="7"
+        android:textSize="16sp"
+        app:iconTint="#BEFFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.519" />
+
+    <Button
+        android:id="@+id/button30"
+        android:layout_width="143dp"
+        android:layout_height="46dp"
+        android:background="#ED0202"
+        android:backgroundTint="#EC1010"
+        android:backgroundTintMode="add"
+        android:onClick="dividir"
+        android:text="/"
+        android:textColorHighlight="#B60A0A"
+        android:textColorLink="#FFFFFF"
+        android:textSize="16sp"
+        app:iconTint="#BEFFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.175"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.42" />
+
+    <Button
+        android:id="@+id/button20"
+        android:layout_width="65dp"
+        android:layout_height="63dp"
+        android:background="#ED0202"
+        android:backgroundTint="#EC1010"
+        android:onClick="cuatro"
+        android:text="4"
+        android:textSize="16sp"
+        app:iconTint="#BEFFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.135"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.636" />
+
+    <Button
+        android:id="@+id/button16"
+        android:layout_width="64dp"
+        android:layout_height="59dp"
+        android:background="#ED0202"
+        android:backgroundTint="#EC1010"
+        android:onClick="ocho"
+        android:text="8"
+        android:textSize="16sp"
+        app:iconTint="#BEFFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.516" />
+
+    <Button
+        android:id="@+id/button17"
+        android:layout_width="67dp"
+        android:layout_height="61dp"
+        android:background="#ED0202"
+        android:backgroundTint="#EC1010"
+        android:onClick="nueve"
+        android:text="9"
+        android:textSize="16sp"
+        app:iconTint="#BEFFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.593"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.517" />
+
+    <Button
+        android:id="@+id/button29"
+        android:layout_width="161dp"
+        android:layout_height="63dp"
+        android:background="#ED0202"
+        android:backgroundTint="#EC1010"
+        android:onClick="igual"
+        android:text="="
+        android:textSize="16sp"
+        app:iconTint="#BEFFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.881" />
+
+    <Button
+        android:id="@+id/button24"
+        android:layout_width="66dp"
+        android:layout_height="67dp"
+        android:background="#ED0202"
+        android:backgroundTint="#EC1010"
+        android:onClick="uno"
+        android:text="1"
+        android:textSize="16sp"
+        app:iconTint="#BEFFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.136"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.763" />
+
+    <Button
+        android:id="@+id/button25"
+        android:layout_width="68dp"
+        android:layout_height="66dp"
+        android:background="#ED0202"
+        android:backgroundTint="#EC1010"
+        android:onClick="dos"
+        android:text="2"
+        android:textSize="16sp"
+        app:iconTint="#BEFFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.367"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.763" />
+
+    <Button
+        android:id="@+id/button26"
+        android:layout_width="69dp"
+        android:layout_height="67dp"
+        android:background="#ED0202"
+        android:backgroundTint="#EC1010"
+        android:onClick="tres"
+        android:text="3"
+        android:textSize="16sp"
+        app:iconTint="#BEFFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.595"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.763" />
+
+    <Button
+        android:id="@+id/button21"
+        android:layout_width="65dp"
+        android:layout_height="61dp"
+        android:background="#ED0202"
+        android:backgroundTint="#EC1010"
+        android:onClick="cinco"
+        android:text="5"
+        android:textSize="16sp"
+        app:iconTint="#BEFFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.369"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.637" />
+
+    <TextView
+        android:id="@+id/txtresultado"
+        android:layout_width="356dp"
+        android:layout_height="80dp"
+        android:background="#AF9A2D"
+        android:backgroundTint="#FDFDFD"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.247" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
